--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,9 @@
 ---
 
 @import "{{ site.theme }}";
-.page-header {
-    color: #0000ff
+body {
+    background-image: url(../images/bg_02.jpg);
+    background-repeat: repeat-x;
+    background-color: #bb5c0e;
+    margin: 0px;
 }
