--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,6 @@
 
 @import "{{ site.theme }}";
 body {
-    background-image: url(../images/bg_02.jpg);
-    background-repeat: repeat-x;
-    background-color: #bb5c0e;
+    background-color: #b2dfdb;
     margin: 0px;
 }
